--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -232,7 +232,7 @@
         </th>
       </tr>
       <tr style="background: transparent;">
-        <td style="padding: 0px; " [attr.colspan]="this.columnsTable.length">
+        <td style="padding: 0px; " [attr.colspan]="this.columnsTable.length + 1">
           <p-progressBar mode="indeterminate" *ngIf="makingWork" [style]="{'height': '6px'}"></p-progressBar>
         </td>
       </tr>
