--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -443,16 +443,18 @@
   </p-message>
 </p-dialog>
 
+<!-- Componente coordenadas -->
 <div id="coordsWidget" class="esri-widget esri-component" style="padding: 7px 7px 5px;">
   <div style="display: grid; grid-template-columns: auto auto;">
     <select name="select" *ngIf="view.ready" class="esri-select" [(ngModel)]="coordsModel">
-      <option value="G" selected>Grados decimales</option>
-      <option value="P">MAGNA-SIRGAS Origen Central</option>
+      <option value="G" selected>Coordenadas Geográficas</option>
+      <option value="P">Coordenadas Planas Magna Origen Central</option>
     </select>
     <br>
     <div id="coords" style="margin-top: 1.5px;"></div>
   </div>
 </div>
+<!-- Fin componente coordenadas -->
 
 <!-- Tierra Slider del mapa -->
 <div id="time-slider" class="esri-widget esri-component" *ngIf="!errorArcgisService" align="center">
