--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -597,6 +597,7 @@ p-sidebar {
 ::ng-deep #coordsWidget {
   width: 250px !important;
   max-width: 250px !important;
+  font-size: 12px;
 }
 
 ::ng-deep .filter .esri-select {
