Ajuste: Se arreglo problemas en el filtro avanzado de tabla de atributos

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -260,7 +260,7 @@
     <ng-template pTemplate="summary">
       <div style="display: grid; grid-template-columns: auto auto;">
         <div style="text-align: left; font-size: larger;">
-          {{layerSelected.title}}
+          {{layerAttrTable.title}}
         </div>
         <div>
           <button pButton icon="pi pi-search" class="ui-button-rounded ui-button-secodnary"
