Ajuste: Cambio de color a herramientas de Ubicar coordenada

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -676,3 +676,7 @@ p-sidebar {
   background: none;
   color: initial;
 }
+
+::ng-deep .esri-coordinate-conversion__tools .esri-widget--button {
+  background-color: #f4f4f4;
+}
