Ajuste: Se cambio el cursor en modo de identificacion, se arreglo lo de extract shape de seleccion

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -235,6 +235,14 @@ p-sidebar {
   position: fixed;
 }
 
+::ng-deep .help-cursor {
+  cursor: help !important;
+}
+
+::ng-deep .normal-cursor {
+  cursor: default !important;
+}
+
 .loading-machin {
   position: fixed;
   top: 50%;
