--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -63,7 +63,7 @@
 <!-- Fin de div de carga de tareas -->
 
 <!-- Div contenedor del mapa -->
-<div #mapViewNode></div>
+<div id="map" #mapViewNode></div>
 <!-- Fin del div contenedor del mapa -->
 
 <!-- Modal de extracción de datos -->
